--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,21 @@
         <link rel="stylesheet" type="text/css" href="portfolio.css">
     </head>
     <body>
-        <div class="container">
-            <div class="banner">
-                <p class="banner-text">Portfolio</p>
+        <header>
+            <div class="container">
+                <div class="banner">
+                    <p class="banner-text">Portfolio</p>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+
+        </header>
     </body>
 </html>
