Remove unnecessary stuff

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,13 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li class="active_menu" id="home" onclick="changeActive(this)"><a href="#">Home</a></li>
-                        <li id="skills" onclick="changeActive(this)"><a href="#">Skills</a></li>
-                        <li id="projects" onclick="changeActive(this)"><a href="#">Projects</a></li>
-                        <li id="contact" onclick="changeActive(this)"><a href="#">Contact</a></li>
+                        <li class="active_menu"onclick="changeActive(this)"><a href="#">Home</a></li>
+                        <li onclick="changeActive(this)"><a href="#">Skills</a></li>
+                        <li onclick="changeActive(this)"><a href="#">Projects</a></li>
+                        <li onclick="changeActive(this)"><a href="#">Contact</a></li>
                     </ul>
+                </div>
+                <div class="">
                 </div>
             </div>
 
