Create simple home page

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,11 @@
             </div>
         </header>
         <div class=page id="home">
-            <p>Welcome to my home</p>
+            <img src="emoji.png"/>
+            <p>I am a software engineer located in New York. I recently attended Fullstack Academy, a coding bootcamp with a
+                less than eight percent acceptance rate. At Fullstack Academy, I utilized fullstack Javascript to create modern
+                web applications.
+            </p>
         </div>
         <div class="page" id="skills">
             <h3>Web Development</h3>
