Minor styling changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class=page id="home">
-            <img src="emoji.png"/>
+            <img id="emoji" src="emoji.png"/>
             <p>I am a software engineer located in New York. I recently attended Fullstack Academy, a coding bootcamp with a
                 less than eight percent acceptance rate. At Fullstack Academy, I utilized fullstack Javascript to create modern
                 web applications.
@@ -58,6 +58,9 @@
             <ul>
                 <li>Java</li>
             </ul>
+        </div>
+        <div class="page" id="projects">
+            <p>Test</p>
         </div>
     </body>
 </html>
