--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
     <body>
         <header>
             <div class="banner">
-                <p class="banner-text">Ming Tung Wong</p>
+                <p class="banner_name">Ming Tung Wong</p>
+                <p class="banner_title">Software Engineer</p>
             </div>
             <div class="nav">
                 <ul>
