--- a/portfolio.html
+++ b/portfolio.html
@@ -91,6 +91,14 @@
         <div class="page" id="contact" style="display:none">
             <h3>Contact Me</h3>
             <hr>
+            <div class="contact_page">
+                <img src="media/logos/logo_gmail_48px.png" /><span id="email_address">wong.mingt@gmail.com</span>
+                <div id="profile_links">
+                    <a href="https://www.linkedin.com/in/mingtungwong/"><img src="media/logos/In-2C-48px-R.png"/></a>
+                    <a href="https://github.com/mingtungwong"><img src="media/logos/GitHub-Mark-64px.png"/></a>
+                    <a href="https://angel.co/ming-tung-wong"><img src="media/logos/AngelList_Black_Victory_Hand.png"/></a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
