Change contact links to open in a new tab

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,9 +94,9 @@
             <div class="contact_page">
                 <img src="media/logos/logo_gmail_48px.png" /><span id="email_address">wong.mingt@gmail.com</span>
                 <div id="profile_links">
-                    <a href="https://www.linkedin.com/in/mingtungwong/"><img src="media/logos/In-2C-48px-R.png"/></a>
-                    <a href="https://github.com/mingtungwong"><img src="media/logos/GitHub-Mark-64px.png"/></a>
-                    <a href="https://angel.co/ming-tung-wong"><img src="media/logos/AngelList_Black_Victory_Hand.png"/></a>
+                    <a href="https://www.linkedin.com/in/mingtungwong/" target="_blank"><img src="media/logos/In-2C-48px-R.png"/></a>
+                    <a href="https://github.com/mingtungwong" target="_blank"><img src="media/logos/GitHub-Mark-64px.png"/></a>
+                    <a href="https://angel.co/ming-tung-wong" target="_blank"><img src="media/logos/AngelList_Black_Victory_Hand.png"/></a>
                 </div>
             </div>
         </div>
