Begin modifying the skills page to use image/logos rather than plaintext

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,27 @@
         </div>
         <div class="page" id="skills" style="display:none">
             <h3>Web Development</h3>
-            <ul>
-                <li>Javascript(ES6)</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>React/Redux</li>
-                </li>Webpack</li>
-                <li>Node.js</li>
-                <li>Express.js</li>
-                <li>Sequelize</li>
-                <li>Socket.io</li>
-                <li>Passport.js</li>
-                <li>PostgreSQL</li>
-                <li>REST</li>
-            </ul>
+            <div id="web_dev_skills">
+                <div>
+                    <img src="media/skill logos/web dev/es6.jpg" title="Javascript(ES6)"/>
+                    <img src="media/skill logos/web dev/HTML5_Logo_128.png" title="HTML5"/>
+                    <img src="media/skill logos/web dev/preview-css3logo.png" title="CSS3"/>
+                </div>
+                <div>
+                    <img src="media/skill logos/web dev/react.png" title="React"/>
+                    <img src="media/skill logos/web dev/redux.png" title="Redux"/>
+                    <img src="media/skill logos/web dev/webpack.png" title="Wepback"/>
+                </div>
+                <div>
+                    <img src="media/skill logos/web dev/socket-io.png" title="Socket.io"/>
+                    <img src="media/skill logos/web dev/nodejs.png" title="Node.js"/>
+                    <img src="media/skill logos/web dev/express_js.png" title="Express.js"/>
+                </div>
+                <div>
+                    <img src="media/skill logos/web dev/sequelize.png" title="Sequelize"/>
+                    <img src="media/skill logos/web dev/PostgreSQL.png" title="PostgreSQL"/>
+                </div>
+            </div>
             <h3>Version Control</h3>
             <ul>
                 <li>Git</li>
