Finish changing skills page to use logos

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,19 +50,25 @@
                 </div>
             </div>
             <h3>Version Control</h3>
-            <ul>
-                <li>Git</li>
-                <li>Github</li>
-            </ul>
+            <div id="version_control_skills">
+                <div>
+                    <img src="media/skill logos/version control/git.png" title="Git"/>
+                    <img src="media/skill logos/version control/github.png" title="Github"/>
+                </div>
+            </div>
             <h3>TDD</h3>
-            <ul>
-                <li>Mocha</li>
-                <li>Chai</li>
-            </ul>
+            <div id="tdd_skills">
+                <div>
+                    <img src="media/skill logos/tdd/mocha.png" title="Mocha"/>
+                    <img src="media/skill logos/tdd/chai.png" title="Chai"/>
+                </div>
+            </div>
             <h3>OOP</h3>
-            <ul>
-                <li>Java</li>
-            </ul>
+            <div id="oop_skills">
+                <div>
+                    <img src="media/skill logos/oop/java.png" title="Java"/>
+                </div>
+            </div>
         </div>
         <div class="page" id="projects" style="display:none">
             <h3>Projects</h3>
