Added some text

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
         </div>
         <div class="page" id="skills" style="display:none">
             <h3>Web Development</h3>
+            <h4>(Hover over logo for name)</h4>
             <div id="web_dev_skills">
                 <div>
                     <img src="media/skill logos/web dev/es6.jpg" title="Javascript(ES6)"/>
