Added an icon and title to page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Ming Tung Wong</title>
         <link rel="stylesheet" type="text/css" href="style/portfolio.css">
+        <link rel="icon" href="favicon.ico">
         <script src="scripts/scripts.js"></script>
     </head>
     <body>
